<resources>
    <string name="app_name">Мой кошелёк</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="test_profile_name">Султонов Йулдошбой</string>
    <string name="test_credit_card">Кредитная карта</string>
    <string name="test_balance_amount">$ 85 000</string>
    <string name="in_balance">На счету</string>
    <string name="last_history">Последняя история</string>
    <string name="add">Добавить</string>
    <string name="all_actions">Все действии</string>
    <string name="test_card_number">4200 **** **** **65</string>
    <string name="test_date">02/21</string>
    <string name="test_address">Red Square, Moscow, Russian Federation</string>
    <string name="placeholder_description">Местоположение:</string>
    <string name="test_transaction_date">27 илюль 2018 12:21</string>
    <string name="time_description">Дата:</string>
    <string name="my_wallets">Мои счета</string>
    <string name="statistics">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="about">О приложении</string>
    <string name="type_wallet">Тип кошелька</string>
    <string name="currency">Валюта</string>

    <string name="address_found">Адрес найден</string>
    <string name="invalid_lat_long_used">Используемая недопустимая широта или долгота</string>
    <string name="no_address_found">Извините, адрес не найден</string>
    <string name="no_geocoder_available">Отсутствует доступный геокодер</string>
    <string name="no_location_data_provided">Данные о местоположении отсутствуют</string>
    <string name="service_not_available">К сожалению, услуга недоступна</string>

    <string name="permission_denied_explanation">Разрешение было отклонено, но оно необходимо для ядра функциональность.</string>
    <string name="permission_rationale">Требуется разрешение на размещение для основных функций</string>
    <string name="category">Категория</string>

    <string name="auto">Auto</string>
    <string name="clothing">Clothing</string>
    <string name="house">House</string>
    <string name="cafe_and_restaurants">Cafe and Restaurants</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="other">Other</string>
    <string name="salary">Salary</string>
    <string name="gift">Gift</string>
    <string name="periodic_transaction">Периодичная транзакция</string>
    <string name="period">Период в днях</string>
    <string name="income_expense">Доход/Расход</string>
    <string name="wallet">Счет</string>
    <string name="wallet_name">Название кошелька</string>
    <string name="wallet_number">Номер кошелька</string>
    <string name="wallet_owner">Имя владельца</string>
    <string name="card_number">Номер карты</string>
    <string name="card_expires">Срок действия карты</string>
    <string name="account_name">Название банка или счета</string>
    <string name="account_number">Номер счета</string>
    <string name="fill_field">Пожалуйста заполните поле</string>
    <string name="place_example">Moscow, Russia</string>
    <string name="success">Успешно!</string>
    <string name="create_template_question">Создать шаблон?</string>
    <string name="template_name">Имя шаблона</string>
    <string name="choose_template">Выбрать шаблон</string>
    <string name="period_must_be_int">Период должен быть целым числом</string>
    <string name="edit">Редактировать</string>
    <string name="wallets">Кошельки</string>
    <string name="last_transaction">Последняя транзакция</string>
    <string name="period_transactions">Периодические транзакции</string>
    <string name="show_all_transactions">Показать все транзакции</string>
    <string name="last_period_transaction">Последняя периодическая транзакция</string>
    <string name="show_all">Показать все</string>
    <string name="amount">Сумма</string>
    <string name="choose_category">Выберите категорию</string>
    <string name="delete">Удалить</string>
    <string name="are_you_sure_to_delete">Вы точно хотите удалить?</string>
    <string name="wallet_balance">Баланс кошелька</string>
    <string name="choose_wallet">Выберите кошелек</string>
    <string name="template_transactions">Шаблоны</string>
    <string name="report">Отчет</string>
    <string name="from">Дата от</string>
    <string name="to">Дата до</string>
    <string name="show_report">Показать отчет</string>

    <string-array name="wallet_types">
        <item>Наличные деньги</item>
        <item>Кредитная карта</item>
        <item>Банковский счет</item>
        <item>Электронный кошелек</item>
    </string-array>
    <string-array name="currency_types">
        <item>USD</item>
        <item>RUB</item>
    </string-array>
    <string-array name="transaction_expense_categories">
        <item>@string/choose_category</item>
        <item>@string/auto</item>
        <item>@string/clothing</item>
        <item>@string/house</item>
        <item>@string/cafe_and_restaurants</item>
        <item>@string/entertainment</item>
        <item>@string/health</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="transaction_income_categories">
        <item>@string/choose_category</item>
        <item>@string/salary</item>
        <item>@string/gift</item>
        <item>@string/other</item>
    </string-array>
</resources>
