<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_wallet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/icon_card"
        android:layout_width="@dimen/dimen_16"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:src="@drawable/ic_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/wallet_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/wallet_name"
        android:singleLine="true"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/icon_balance"
        android:layout_width="@dimen/dimen_16"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginTop="@dimen/dimen_16"
        android:src="@drawable/ic_currency"
        app:layout_constraintLeft_toLeftOf="@id/icon_card"
        app:layout_constraintTop_toBottomOf="@id/wallet_name" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/wallet_balance"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/wallet_balance"
        android:inputType="numberDecimal"
        android:maxLength="14"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wallet_name" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/icon_currency"
        android:layout_width="@dimen/dimen_16"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginTop="@dimen/dimen_16"
        android:src="@drawable/ic_currency"
        app:layout_constraintLeft_toLeftOf="@id/icon_card"
        app:layout_constraintTop_toBottomOf="@id/wallet_balance" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/wallet_currency_spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="@dimen/dimen_16"
        android:entries="@array/currency_types"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wallet_balance" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/delete_button"
        android:layout_width="128dp"
        android:layout_height="@dimen/dimen_36"
        android:layout_marginEnd="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_16"
        android:textColor="@color/white"
        android:background="@drawable/delete_btn_background"
        android:text="@string/delete"
        app:layout_constraintRight_toLeftOf="@id/submit_button"
        app:layout_constraintTop_toBottomOf="@id/wallet_currency_spinner" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:layout_width="128dp"
        android:layout_height="@dimen/dimen_36"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@drawable/save_btn_background"
        android:text="@string/add"
        app:layout_constraintRight_toRightOf="@id/wallet_currency_spinner"
        app:layout_constraintTop_toBottomOf="@id/wallet_currency_spinner" />
</android.support.constraint.ConstraintLayout>