<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/date_from_text_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_64"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@drawable/save_btn_background"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/from"
        app:layout_constraintEnd_toStartOf="@id/date_to_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_to_text_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_64"
        android:layout_marginStart="@dimen/dimen_16"
        android:background="@drawable/save_btn_background"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/to"
        app:layout_constraintEnd_toStartOf="@id/show_button"
        app:layout_constraintStart_toEndOf="@id/date_from_text_view"
        app:layout_constraintTop_toTopOf="@id/date_from_text_view" />

    <TextView
        android:id="@+id/show_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_64"
        android:layout_marginEnd="@dimen/dimen_16"
        android:layout_marginStart="@dimen/dimen_16"
        android:background="@drawable/delete_btn_background"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/show_report"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/date_to_text_view"
        app:layout_constraintTop_toTopOf="@id/date_to_text_view" />

    <TextView
        android:id="@+id/report_text_view"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/report"
        app:layout_constraintTop_toBottomOf="@id/date_from_text_view" />

    <android.support.v7.widget.CardView
        android:id="@+id/main_report_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@id/report_text_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/income_usd"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_36"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dimen_4"
                    android:textColor="@color/green" />

                <TextView
                    android:id="@+id/income_rub"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_36"
                    android:layout_weight="1"
                    android:padding="@dimen/dimen_4"
                    android:textColor="@color/green" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expense_usd"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_36"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dimen_4"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/expense_rub"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_36"
                    android:layout_weight="1"
                    android:padding="@dimen/dimen_4"
                    android:textColor="@color/red" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/report_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_report_card" />
</android.support.constraint.ConstraintLayout>